chore: daily development

--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -34,10 +34,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          cache: 'pnpm' # 设置 pnpm 缓存
+      - name: Install pnpm
+        run: npm install -g pnpm # 全局安装 pnpm
       - name: Install dependencies
-        run: npm i
+        run: pnpm install # 使用 pnpm 安装依赖
       - name: Build
-        run: npm run build
+        run: pnpm run build # 使用 pnpm 运行构建命令
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
